# pascal_format

./: CMakeLists.txt  LICENSE  README.md  ReadMe  ReadMe_rus_1251  ReadMe_rus_UTF8  cpp_unicode.cpp  cpp_unicode_windows.cpp  dwmutex_windows.cpp  dwsync.h  pascal_format.cpp  pascal_format.h  pasfmt_thread_support.cpp  pasfmt_thread_support.h
example/: CMakeLists.txt  main.cpp
example/pasfmt_lib/include/: cpp_unicode.h  dwmutex.h
